[build-system]
requires = ["setuptools ~= 67.0"]

[project]
name = "eventhub-to-sa"
description = "Scripts for ingesting event from Azure eventhub and writing them to Azure Storage Accounts"
version = "1.0.0"
readme = "README.md"

dependencies = [
    'pyspark==3.3.2',
    'azure-identity==1.12.0',
    'azure-eventhub==5.11.6',
    'azure-eventhub-checkpointstoreblob-aio==1.1.4',
    'azure-keyvault-secrets==4.7.0',
    'nest-asyncio==1.6.0',
]