[build-system]
requires = ["setuptools ~= 67.0"]

[project]
name = "eventhub-to-sa"
description = "Scripts for ingesting event from Azure eventhub and writing them to Azure Storage Accounts"
version = "1.0.0"
readme = "README.md"

dependencies = [
    'pyspark==3.3.2',
    'azure-identity==1.16.1',
    'azure-eventhub==5.11.6',
    'azure-eventhub-checkpointstoreblob-aio==1.1.4',
    'azure-keyvault-secrets==4.7.0',
    'nest-asyncio==1.6.0',
]

[project.optional-dependencies]
dev = [
    'bandit~=1.7',
    'black~=23.1',
    'pytest~=7.2',
    'mypy~=1.4.1',
    'pylint ~= 2.16',
    'pre-commit ~= 3.1.1',
    'responses~=0.22',
    'autoflake ~= 2.0.1',
    'coverage[toml]~=7.2',
    'py4j~=0.10.9',
    'types-requests==2.28.11.17',
    'types-python-dateutil==2.8.19.12'
]

[tool.bandit]
exclude = ['venv', '.git', 'build']
skips = ['B101', 'B608']  # B608: hardcoded_sql_expressions - can skip, as we don't interface with the outside world


[tool.pylint.similarities]
# Ignore imports when computing similarities. They create a lot of false positives because of
# typing, were the imports look a lot like each other across many files.
ignore-comments = true
ignore-docstrings = true
ignore-imports = true
ignore-signatures = true
min-similarity-lines = 15  # default is 4

[tool.pylint.format]
# id as a variable name is too short according to pylint, but is still often valid.
good-names = ['id', 'df', 'SQL', 'i']

[tool.black]
line-length = 120

[tool.mypy]
strict_optional = true
ignore_missing_imports = true
no_implicit_optional = true
show_error_codes = true
show_column_numbers = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_calls = false  # set to 'false' due to too many untyped 3rd party libraries
warn_unused_ignores = true
warn_return_any = true
warn_unreachable = true
exclude = ['tests', '.git', 'venv']

[tool.autoflake]
recursive = 'true'
in-place = 'true'
remove-unused-variables = 'true'
remove-all-unused-imports = 'true'
quiet = 'true' # only report issues